Grammars/Prop/Prop/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Prop/Par.y
-----------------------------------------------------------------------------

state 49 contains 1 shift/reduce conflicts.
state 50 contains 1 shift/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 52 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 54 contains 2 shift/reduce conflicts.
state 55 contains 2 shift/reduce conflicts.
state 56 contains 2 shift/reduce conflicts.
state 57 contains 2 shift/reduce conflicts.
state 58 contains 2 shift/reduce conflicts.
state 59 contains 3 shift/reduce conflicts.
state 61 contains 6 shift/reduce conflicts.
state 109 contains 1 shift/reduce conflicts.
state 111 contains 2 reduce/reduce conflicts.
state 133 contains 1 shift/reduce conflicts.
state 140 contains 6 shift/reduce conflicts.
state 141 contains 6 shift/reduce conflicts.
state 156 contains 3 shift/reduce conflicts.
state 157 contains 3 shift/reduce conflicts.
state 158 contains 2 shift/reduce conflicts.
state 159 contains 2 shift/reduce conflicts.
state 160 contains 2 shift/reduce conflicts.
state 161 contains 2 shift/reduce conflicts.
state 162 contains 2 shift/reduce conflicts.
state 163 contains 2 shift/reduce conflicts.
state 164 contains 2 shift/reduce conflicts.
state 165 contains 2 shift/reduce conflicts.
state 166 contains 2 shift/reduce conflicts.
state 167 contains 1 shift/reduce conflicts.
state 168 contains 1 shift/reduce conflicts.
state 169 contains 1 shift/reduce conflicts.
state 170 contains 1 shift/reduce conflicts.
state 171 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pListExp -> ListExp                         (0)
	%start_pExp -> Exp                                 (1)
	%start_pExp2 -> Exp2                               (2)
	%start_pExp3 -> Exp3                               (3)
	%start_pExp4 -> Exp4                               (4)
	%start_pExp5 -> Exp5                               (5)
	%start_pExp6 -> Exp6                               (6)
	%start_pExp7 -> Exp7                               (7)
	%start_pExp8 -> Exp8                               (8)
	%start_pExp9 -> Exp9                               (9)
	%start_pExp10 -> Exp10                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp12 -> Exp12                             (12)
	%start_pExp13 -> Exp13                             (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp15 -> Exp15                             (15)
	%start_pQuant -> Quant                             (16)
	%start_pListCIdent -> ListCIdent                   (17)
	%start_pConstant -> Constant                       (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pUnary_operator -> Unary_operator           (20)
	Char -> L_charac                                   (21)
	Double -> L_doubl                                  (22)
	Integer -> L_integ                                 (23)
	String -> L_quoted                                 (24)
	Unsigned -> L_Unsigned                             (25)
	Long -> L_Long                                     (26)
	UnsignedLong -> L_UnsignedLong                     (27)
	Hexadecimal -> L_Hexadecimal                       (28)
	HexUnsigned -> L_HexUnsigned                       (29)
	HexLong -> L_HexLong                               (30)
	HexUnsLong -> L_HexUnsLong                         (31)
	Octal -> L_Octal                                   (32)
	OctalUnsigned -> L_OctalUnsigned                   (33)
	OctalLong -> L_OctalLong                           (34)
	OctalUnsLong -> L_OctalUnsLong                     (35)
	CDouble -> L_CDouble                               (36)
	CFloat -> L_CFloat                                 (37)
	CLongDouble -> L_CLongDouble                       (38)
	CIdent -> L_CIdent                                 (39)
	ListExp -> Exp ListExp                             (40)
	ListExp ->                                         (41)
	ListExp -> Exp                                     (42)
	ListExp -> Exp ',' ListExp                         (43)
	Exp -> Exp1 '==>' Exp2                             (44)
	Exp -> Exp1                                        (45)
	Exp2 -> Exp2 '||' Exp3                             (46)
	Exp2 -> Exp3                                       (47)
	Exp3 -> Exp3 '&&' Exp4                             (48)
	Exp3 -> Exp4                                       (49)
	Exp4 -> Exp4 '|' Exp5                              (50)
	Exp4 -> Exp5                                       (51)
	Exp5 -> Exp5 '^' Exp6                              (52)
	Exp5 -> Exp6                                       (53)
	Exp6 -> Exp6 '&' Exp7                              (54)
	Exp6 -> Exp7                                       (55)
	Exp7 -> Exp7 '==' Exp8                             (56)
	Exp7 -> Exp7 '!=' Exp8                             (57)
	Exp7 -> Exp8                                       (58)
	Exp8 -> Exp8 '<' Exp9                              (59)
	Exp8 -> Exp8 '>' Exp9                              (60)
	Exp8 -> Exp9                                       (61)
	Exp9 -> Exp9 '<=' Exp10                            (62)
	Exp9 -> Exp9 '>=' Exp10                            (63)
	Exp9 -> Exp10                                      (64)
	Exp10 -> Exp10 '<<' Exp11                          (65)
	Exp10 -> Exp10 '>>' Exp11                          (66)
	Exp10 -> Exp11                                     (67)
	Exp11 -> Exp11 '+' Exp12                           (68)
	Exp11 -> Exp11 '-' Exp12                           (69)
	Exp11 -> Exp12                                     (70)
	Exp12 -> Exp12 '*' Exp13                           (71)
	Exp12 -> Exp12 '/' Exp13                           (72)
	Exp12 -> Exp12 '%' Exp13                           (73)
	Exp12 -> Exp13                                     (74)
	Exp13 -> '++' Exp14                                (75)
	Exp13 -> '--' Exp14                                (76)
	Exp13 -> Unary_operator Exp13                      (77)
	Exp13 -> Exp14                                     (78)
	Exp14 -> Exp14 '[' Exp ']'                         (79)
	Exp14 -> Exp14 '(' ')'                             (80)
	Exp14 -> Exp14 '(' ListExp ')'                     (81)
	Exp14 -> Exp14 '.' CIdent                          (82)
	Exp14 -> Exp14 '->' CIdent                         (83)
	Exp14 -> Exp14 '++'                                (84)
	Exp14 -> Exp14 '--'                                (85)
	Exp14 -> Exp15                                     (86)
	Exp15 -> Quant ListCIdent '|' Exp                  (87)
	Exp15 -> CIdent                                    (88)
	Exp15 -> Constant                                  (89)
	Exp15 -> String                                    (90)
	Exp15 -> '(' Exp ')'                               (91)
	Quant -> 'exists'                                  (92)
	Quant -> 'forall'                                  (93)
	ListCIdent -> CIdent                               (94)
	ListCIdent -> CIdent ',' ListCIdent                (95)
	Constant -> Double                                 (96)
	Constant -> Char                                   (97)
	Constant -> Unsigned                               (98)
	Constant -> Long                                   (99)
	Constant -> UnsignedLong                           (100)
	Constant -> Hexadecimal                            (101)
	Constant -> HexUnsigned                            (102)
	Constant -> HexLong                                (103)
	Constant -> HexUnsLong                             (104)
	Constant -> Octal                                  (105)
	Constant -> OctalUnsigned                          (106)
	Constant -> OctalLong                              (107)
	Constant -> OctalUnsLong                           (108)
	Constant -> CDouble                                (109)
	Constant -> CFloat                                 (110)
	Constant -> CLongDouble                            (111)
	Constant -> Integer                                (112)
	Exp1 -> Exp2                                       (113)
	Unary_operator -> '&'                              (114)
	Unary_operator -> '*'                              (115)
	Unary_operator -> '+'                              (116)
	Unary_operator -> '-'                              (117)
	Unary_operator -> '~'                              (118)
	Unary_operator -> '!'                              (119)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'->'           { PT _ (TS _ 14) }
	'.'            { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<<'           { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'==>'          { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'>>'           { PT _ (TS _ 24) }
	'['            { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'^'            { PT _ (TS _ 27) }
	'exists'       { PT _ (TS _ 28) }
	'forall'       { PT _ (TS _ 29) }
	'|'            { PT _ (TS _ 30) }
	'||'           { PT _ (TS _ 31) }
	'~'            { PT _ (TS _ 32) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Unsigned     { PT _ (T_Unsigned $$) }
	L_Long         { PT _ (T_Long $$) }
	L_UnsignedLong { PT _ (T_UnsignedLong $$) }
	L_Hexadecimal  { PT _ (T_Hexadecimal $$) }
	L_HexUnsigned  { PT _ (T_HexUnsigned $$) }
	L_HexLong      { PT _ (T_HexLong $$) }
	L_HexUnsLong   { PT _ (T_HexUnsLong $$) }
	L_Octal        { PT _ (T_Octal $$) }
	L_OctalUnsigned{ PT _ (T_OctalUnsigned $$) }
	L_OctalLong    { PT _ (T_OctalLong $$) }
	L_OctalUnsLong { PT _ (T_OctalUnsLong $$) }
	L_CDouble      { PT _ (T_CDouble $$) }
	L_CFloat       { PT _ (T_CFloat $$) }
	L_CLongDouble  { PT _ (T_CLongDouble $$) }
	L_CIdent       { PT _ (T_CIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pListExp rule  0
	%start_pExp     rule  1
	%start_pExp2    rule  2
	%start_pExp3    rule  3
	%start_pExp4    rule  4
	%start_pExp5    rule  5
	%start_pExp6    rule  6
	%start_pExp7    rule  7
	%start_pExp8    rule  8
	%start_pExp9    rule  9
	%start_pExp10   rule  10
	%start_pExp11   rule  11
	%start_pExp12   rule  12
	%start_pExp13   rule  13
	%start_pExp14   rule  14
	%start_pExp15   rule  15
	%start_pQuant   rule  16
	%start_pListCIdent rule  17
	%start_pConstant rule  18
	%start_pExp1    rule  19
	%start_pUnary_operator rule  20
	Char            rule  21
	Double          rule  22
	Integer         rule  23
	String          rule  24
	Unsigned        rule  25
	Long            rule  26
	UnsignedLong    rule  27
	Hexadecimal     rule  28
	HexUnsigned     rule  29
	HexLong         rule  30
	HexUnsLong      rule  31
	Octal           rule  32
	OctalUnsigned   rule  33
	OctalLong       rule  34
	OctalUnsLong    rule  35
	CDouble         rule  36
	CFloat          rule  37
	CLongDouble     rule  38
	CIdent          rule  39
	ListExp         rules 40, 41, 42, 43
	Exp             rules 44, 45
	Exp2            rules 46, 47
	Exp3            rules 48, 49
	Exp4            rules 50, 51
	Exp5            rules 52, 53
	Exp6            rules 54, 55
	Exp7            rules 56, 57, 58
	Exp8            rules 59, 60, 61
	Exp9            rules 62, 63, 64
	Exp10           rules 65, 66, 67
	Exp11           rules 68, 69, 70
	Exp12           rules 71, 72, 73, 74
	Exp13           rules 75, 76, 77, 78
	Exp14           rules 79, 80, 81, 82, 83, 84, 85, 86
	Exp15           rules 87, 88, 89, 90, 91
	Quant           rules 92, 93
	ListCIdent      rules 94, 95
	Constant        rules 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112
	Exp1            rule  113
	Unary_operator  rules 114, 115, 116, 117, 118, 119

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pListExp -> . ListExp                        (rule 0)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89
	%eof           reduce using rule 41

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	ListExp        goto state 110
	Exp            goto state 111
	Exp2           goto state 49
	Exp3           goto state 50
	Exp4           goto state 51
	Exp5           goto state 52
	Exp6           goto state 53
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Exp1           goto state 109
	Unary_operator goto state 66

State 1

	%start_pExp -> . Exp                                (rule 1)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp            goto state 108
	Exp2           goto state 49
	Exp3           goto state 50
	Exp4           goto state 51
	Exp5           goto state 52
	Exp6           goto state 53
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Exp1           goto state 109
	Unary_operator goto state 66

State 2

	%start_pExp2 -> . Exp2                              (rule 2)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp2           goto state 107
	Exp3           goto state 50
	Exp4           goto state 51
	Exp5           goto state 52
	Exp6           goto state 53
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 3

	%start_pExp3 -> . Exp3                              (rule 3)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp3           goto state 106
	Exp4           goto state 51
	Exp5           goto state 52
	Exp6           goto state 53
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 4

	%start_pExp4 -> . Exp4                              (rule 4)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp4           goto state 105
	Exp5           goto state 52
	Exp6           goto state 53
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 5

	%start_pExp5 -> . Exp5                              (rule 5)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp5           goto state 104
	Exp6           goto state 53
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 6

	%start_pExp6 -> . Exp6                              (rule 6)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp6           goto state 103
	Exp7           goto state 54
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 7

	%start_pExp7 -> . Exp7                              (rule 7)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp7           goto state 102
	Exp8           goto state 55
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 8

	%start_pExp8 -> . Exp8                              (rule 8)

	'!'            shift, and enter state 24
	'&'            shift, and enter state 25
	'('            shift, and enter state 67
	'*'            shift, and enter state 26
	'+'            shift, and enter state 27
	'++'           shift, and enter state 68
	'-'            shift, and enter state 28
	'--'           shift, and enter state 69
	'exists'       shift, and enter state 70
	'forall'       shift, and enter state 71
	'~'            shift, and enter state 29
	L_charac       shift, and enter state 22
	L_doubl        shift, and enter state 72
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Unsigned     shift, and enter state 75
	L_Long         shift, and enter state 76
	L_UnsignedLong shift, and enter state 77
	L_Hexadecimal  shift, and enter state 78
	L_HexUnsigned  shift, and enter state 79
	L_HexLong      shift, and enter state 80
	L_HexUnsLong   shift, and enter state 81
	L_Octal        shift, and enter state 82
	L_OctalUnsignedshift, and enter state 83
	L_OctalLong    shift, and enter state 84
	L_OctalUnsLong shift, and enter state 85
	L_CDouble      shift, and enter state 86
	L_CFloat       shift, and enter state 87
	L_CLongDouble  shift, and enter state 88
	L_CIdent       shift, and enter state 89

	Char           goto state 30
	Double         goto state 31
	Integer        goto state 32
	String         goto state 33
	Unsigned       goto state 34
	Long           goto state 35
	UnsignedLong   goto state 36
	Hexadecimal    goto state 37
	HexUnsigned    goto state 38
	HexLong        goto state 39
	HexUnsLong     goto state 40
	Octal          goto state 41
	OctalUnsigned  goto state 42
	OctalLong      goto state 43
	OctalUnsLong   goto state 44
	CDouble        goto state 45
	CFloat         goto state 46
	CLongDouble    goto state 47
	CIdent         goto state 48
	Exp8           goto state 101
	Exp9           goto state 56
	Exp10          goto state 57
	Exp11          goto state 58
	Exp12          goto state 59
	Exp13          goto state 60
	Exp14          goto state 61
	Exp15          goto state 62
	Quant          goto state 63
	Constant       goto state 64
	Unary_operator goto state 66

State 9

	%start_pExp9 -> . Exp9                              (rule 9)
